docs: draft 2.0.0-beta.tw readme

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -8,12 +8,56 @@ npm install @master/css@beta
 
 以下是這次的改版及新功能：
 
-- [全新的配置檔](#全新的配置檔)
-  - [`configure()` 擴展及合併預設配置](#configure-擴展及合併預設配置)
-  - [`defaultConfig` 存取預設配置](#defaultconfig-存取預設配置)
 - [全新的語法](#全新的語法)
   - [`color` 的替代名稱 `fg|foreground`](#color-的替代名稱-fgforeground)
   - [`-webkit-text-fill-color` 的速記 `(t|text):color`](#-webkit-text-fill-color-的速記-ttextcolor)
+- [全新的配置檔](#全新的配置檔)
+  - [`configure()` 擴展及合併預設配置](#configure-擴展及合併預設配置)
+  - [`defaultConfig` 存取預設配置](#defaultconfig-存取預設配置)
+- [其他新的 API](#其他新的-api)
+
+---
+
+# 全新的語法
+
+## `color` 的替代名稱 `fg|foreground`
+
+過去你會看到 `text-blue`/`font-blue` 的命名風格並且 CSS 規則通常是：
+```css
+.text-blue { color: blue }
+.font-blue { color: blue }
+```
+但是 CSS 的 `color` 設置的對象不只是文字，它還設置了 `border-color`, `box-shadow` 等顏色相關的屬性，那麼以 `text-*` 作為 `color` 的代稱不覺得奇怪嗎？
+
+甚至連原生 CSS 將前景色稱為 `color` 含義也太過廣泛了，因此我們提供 `fg|foreground` 作為你設置前景色的另一個代稱，而且前景剛好也與背景 `bg|background` 相呼應：
+```html
+<button class="fg:white bg:black">Submit</button>
+```
+這裡比較大的改動是我們刪除了 `(f|font):color` 的支持：
+```diff
+  <p class="color:blue">
+- <p class="f:blue">
+- <p class="font:blue">
++ <p class="fg:blue">
++ <p class="foreground:blue">
+```
+你可以透過以下 Regular Expression 在 VSCode 進行全域搜尋：
+```
+?:font|f|[^-]color):(fade|slate|gray|brown|orange|gold|yellow|grass|green|beryl|teal|cyan|sky|blue|indigo|violet|purple|fuchsia|pink|crimson|red)
+```
+取代為：
+```
+fg:$1
+```
+⚠️ 建議執行前先將 `unstaged` 的檔案進行 `commit` 以免取代過程發生無法挽回的錯誤。
+
+## `-webkit-text-fill-color` 的速記 `(t|text):color`
+為文字色彩提供了新的速記：
+```diff
+  <div class="text-fill-color:pink-60"></div>
++ <div class="text:pink-60"></div>
++ <div class="t:pink-60"></div>
+```
 
 ---
 
@@ -138,46 +182,4 @@ console.log(defaultBreakpoints)
 
 ---
 
-# 全新的語法
-
-## `color` 的替代名稱 `fg|foreground`
-
-過去你會看到 `text-blue`/`font-blue` 的命名風格並且 CSS 規則通常是：
-```css
-.text-blue { color: blue }
-.font-blue { color: blue }
-```
-但是 CSS 的 `color` 設置的對象不只是文字，它還設置了 `border-color`, `box-shadow` 等顏色相關的屬性，那麼以 `text-*` 作為 `color` 的代稱不覺得奇怪嗎？
-
-甚至連原生 CSS 將前景色稱為 `color` 含義也太過廣泛了，因此我們提供 `fg|foreground` 作為你設置前景色的另一個代稱，而且前景剛好也與背景 `bg|background` 相呼應：
-```html
-<button class="fg:white bg:black">Submit</button>
-```
-這裡比較大的改動是我們刪除了 `(f|font):color` 的支持：
-```diff
-  <p class="color:blue">
-- <p class="f:blue">
-- <p class="font:blue">
-+ <p class="fg:blue">
-+ <p class="foreground:blue">
-```
-你可以透過以下 Regular Expression 在 VSCode 進行全域搜尋：
-```
-?:font|f|[^-]color):(fade|slate|gray|brown|orange|gold|yellow|grass|green|beryl|teal|cyan|sky|blue|indigo|violet|purple|fuchsia|pink|crimson|red)
-```
-取代為：
-```
-fg:$1
-```
-⚠️ 建議執行前先將 `unstaged` 的檔案進行 `commit` 以免取代過程發生無法挽回的錯誤。
-
-## `-webkit-text-fill-color` 的速記 `(t|text):color`
-為文字色彩提供了新的速記：
-```diff
-  <div class="text-fill-color:pink-60"></div>
-+ <div class="text:pink-60"></div>
-+ <div class="t:pink-60"></div>
-```
-
-------
-
+# 其他新的 API
