docs: 2.0.0-beta.tw readme

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -1,26 +1,59 @@
 
-各位久等了！我們今天釋出了 Master CSS v2.0.0-beta，該公測版本除了提前開放新功能的試用，還希望集結粉絲們對於新功能的反應、回饋甚至建議以增益產品。
+各位久等了！我們今天釋出了 **Master CSS v2.0.0-beta**，該公測版本開放提前試用的目的是希望集結各位對於新功能的反應、回饋甚至建議來加強版本的通用及穩定，並且在 beta 期間做最後的修改。
 
 安裝最新的 beta 版本：
 ```bash
 npm install @master/css@beta
 ```
 
-以下是這次的改版及新功能：
+讓我們開始概覽本次的改版及新功能：
 
 - [全新的語法](#全新的語法)
-  - [`color` 的替代名稱 `fg|foreground`](#color-的替代名稱-fgforeground)
-  - [`-webkit-text-fill-color` 的速記 `(t|text):color`](#-webkit-text-fill-color-的速記-ttextcolor)
-- [全新的配置檔](#全新的配置檔)
-  - [`configure()` 擴展及合併預設配置](#configure-擴展及合併預設配置)
+  - [✨ 群組選取器 Grouping Selectors](#-群組選取器-grouping-selectors)
+  - [✨ `color` 的替代名稱 `fg|foreground`](#-color-的替代名稱-fgforeground)
+  - [✨ `-webkit-text-fill-color` 的速記 `(t|text):color`](#--webkit-text-fill-color-的速記-ttextcolor)
+- [全新的配置及管理](#全新的配置及管理)
+  - [⚙️ `configure()` 擴展及合併配置](#️-configure-擴展及合併配置)
+  - [⚙️ `init()` 手動初始化 Master CSS](#️-init-手動初始化-master-css)
+  - [✨ `config.themes` 自訂主題及簡化標記](#-configthemes-自訂主題及簡化標記)
+  - [✨ `config.selectors` 自訂選取器標記](#-configselectors-自訂選取器標記)
+- [其他的更動](#其他的更動)
+  - [🔄 `fade` -> `slate`](#-fade---slate)
+  - [🔄 `MasterStyleSheet` -> `MasterCSS`](#-masterstylesheet---mastercss)
+  - [🔄 `MasterStyle` -> `MasterCSSRule`](#-masterstyle---mastercssrule)
+  - [🔄 `id="master-css"` -> `title="master"`](#-idmaster-css---titlemaster)
+- [其他 API](#其他-api)
+  - [`render()`](#render)
+  - [`renderFromHTML()`](#renderfromhtml)
+  - [`renderIntoHTML()`](#renderintohtml)
+  - [`fillColorScale()`](#fillcolorscale)
   - [`defaultConfig` 存取預設配置](#defaultconfig-存取預設配置)
-- [其他新的 API](#其他新的-api)
+- [再來是什麼？](#再來是什麼)
+  - [🚧 AOT 預先編譯及 CLI](#-aot-預先編譯及-cli)
 
 ---
 
 # 全新的語法
 
-## `color` 的替代名稱 `fg|foreground`
+## ✨ 群組選取器 Grouping Selectors
+這個功能你一定不陌生，在原生 CSS 使用 `,` 來群組選取器：
+```css
+:before,
+:after {
+   /* declarations */
+}
+```
+現在，透過類名更快速地實現相同的功能
+```diff
+- <div class="content:'`':before content:'`':after"></div>
++ <div class="content:'`':before,:after"></div>
+```
+原先的群組語法也支援群組選取器
+```html
+<div class="{content:'`';fg:gray;mx:1}:before,:after"></div>
+```
+
+## ✨ `color` 的替代名稱 `fg|foreground`
 
 過去你會看到 `text-blue`/`font-blue` 的命名風格並且 CSS 規則通常是：
 ```css
@@ -51,7 +84,7 @@ fg:$1
 ```
 ⚠️ 建議執行前先將 `unstaged` 的檔案進行 `commit` 以免取代過程發生無法挽回的錯誤。
 
-## `-webkit-text-fill-color` 的速記 `(t|text):color`
+## ✨ `-webkit-text-fill-color` 的速記 `(t|text):color`
 為文字色彩提供了新的速記：
 ```diff
   <div class="text-fill-color:pink-60"></div>
@@ -61,7 +94,7 @@ fg:$1
 
 ---
 
-# 全新的配置檔
+# 全新的配置及管理
 在 v1.0 時我們提供 `Style.extend` 讓你自定義配置：
 ```diff
 - import { Style } from '@master/css'
@@ -97,7 +130,7 @@ module.exports = configure({
         desktop: '1280px',
     },
     selectors: {
-        custom: '>div>:first+button'
+        '>custom': '>div>:first+button'
     },
     mediaQueries: {
         watch: '(max-device-width:42mm) and (min-device-width:38mm)'
@@ -121,8 +154,7 @@ module.exports = configure({
 ```
 你可能已經發現一些新的配置，我們稍後會提到。
 
-## `configure()` 擴展及合併預設配置
-
+## ⚙️ `configure()` 擴展及合併配置
 通常你會希望以擴展的方式來增添額外的配置，我們設計了 `configure()` 的方法讓你在保有預設配置的同時進行擴展及合併配置。
 
 - 深層 `merge` 物件
@@ -161,6 +193,194 @@ module.exports = configure({
 }
 ```
 
+## ⚙️ `init()` 手動初始化 Master CSS
+搭配自訂配置初始化 Master CSS：
+```js
+// It's recommanded to create a `./init.js` file to manage initialization.
+
+import config from './master.css' // Your config file
+import { init } from '@master/css'
+
+export const css = init(config)
+```
+
+別忘了在你應用程式的入口檔案引入 `./init.js`，例如 `./main.js`
+```js
+import './init';
+```
+
+如果你原本是在 `<head>` 中透過 CDN 快速啟用，請在引入後初始化 Master CSS：
+```diff
+...
+<head>
+    <script src="https://cdn.master.co/css@2"></script>
++   <script>MasterCSS.init()</script>
+</head>
+...
+```
+
+## ✨ `config.themes` 自訂主題及簡化標記
+擴展自訂選取器標記，合併並保留預設值：
+```js
+const { configure } = require('@master/css')
+
+module.exports = configure({
+    ...,
+    selectors: {
+        '>custom': '>div>:first+button'
+    },
+    ...
+})
+```
+應用它：
+```html
+<div class="hide>custom"></div>
+<div class="hide>div>:first+button">same</div>
+```
+
+## ✨ `config.selectors` 自訂選取器標記
+擴展自訂選取器標記，合併並保留預設值：
+```js
+const { configure } = require('@master/css')
+
+module.exports = configure({
+    ...,
+    selectors: {
+        '>custom': '>div>:first+button'
+    },
+    ...
+})
+```
+應用它：
+```html
+<div class="hide>custom"></div>
+<div class="hide>div>:first+button">same</div>
+```
+⚠️ 這個配置的本意是用來合理地簡化原生 CSS 的選取器像是 `hide:first-child` -> `hide:first`，在縮減的同時建議考量專案的可維護性。
+
+[查看所有預設的選取器標記](https://github.com/master-co/css/tree/beta/src/config/selectors.js)
+
+---
+
+# 其他的更動
+
+## 🔄 `fade` -> `slate`
+重新命名色彩中的 `fade` 為 `slate` 石灰色，以符合普遍的色彩命名。
+```diff
+-    <p class="bg:fade ...">fade</p>
++    <p class="bg:slate ...">slate</p>
+```
+
+## 🔄 `MasterStyleSheet` -> `MasterCSS`
+```diff
+- import { MasterStyleSheet } from '@master/css'
++ import MasterCSS from '@master/css'
+```
+
+## 🔄 `MasterStyle` -> `MasterCSSRule`
+```diff
+- import { MasterStyle } from '@master/css'
++ import { MasterCSSRule } from '@master/css'
+```
+
+## 🔄 `id="master-css"` -> `title="master"`
+```diff
+<html>
+<head>
+-    <style id="master-css">...</style>
++    <style title="master">...</style>
+</head>
+</html>
+```
+
+---
+
+# 其他 API
+
+## `render()`
+傳入類名陣列並返回產生的 CSS 文本。
+```jsx
+import { render } from '@master/css'
+import { css } from './init'
+const classes: string[] = ['text:center', 'font:32']
+const result = render(classes, css)
+```
+rendered result:
+```css
+.font\:32{font-size:2rem}.text\:center{text-align:center}
+```
+
+## `renderFromHTML()`
+傳入 HTML 文本、掃描並返回產生 CSS 文本。
+```jsx
+import { renderFromHTML } from '@master/css'
+import { css } from './init'
+const html: string = `
+    <html>
+        <head></head>
+        <body>
+            <h1 class="text:center font:32">Hello World</h1>
+        </body>
+    </html>
+`
+const result = renderFromHTML(html, css)
+```
+rendered result:
+```css
+.font\:32{font-size:2rem}.text\:center{text-align:center}
+```
+
+## `renderIntoHTML()`
+傳入 HTML 文本 → 掃描並產生 CSS 文本 → 注入到 HTML `<head>` 中 → 返回渲染的 HTML 文本結果。
+```js
+import { renderIntoHTML } from '@master/css'
+import { css } from './init'
+const html: string = `
+    <html>
+        <head></head>
+        <body>
+            <h1 class="text:center font:32">Hello World</h1>
+        </body>
+    </html>
+`
+const result = renderIntoHTML(html, css)
+```
+rendered result:
+```html
+<html>
+    <head>
+        <style title="master">.font\:32{font-size:2rem}.text\:center{text-align:center}</style>
+    </head>
+    <body>
+        <h1 class="text:center font:32">Hello World</h1>
+    </body>
+</html>
+```
+
+## `fillColorScale()`
+將未定義的色階值以相鄰色階值的平均填滿 `1,2,...99`。
+```js
+import { fillColorScale, configure } from '@master/css'
+
+module.exports = configure({
+    colors: {
+        blue: fillColorScale({
+            95: '001141',
+            90: '001d6c',
+            80: '002d9c',
+            70: '0043ce',
+            60: '0f62fe',
+            50: '4589ff',
+            40: '78a9ff',
+            30: 'a6c8ff',
+            20: 'd0e2ff',
+            10: 'edf5ff'
+        })
+    }
+)
+```
+如此以來，你不只有 `blue-40`, `blue-50` 還有 `blue-67`, `blue-72` 等間值可以選用，以獲得更好的顯色。
+
 ## `defaultConfig` 存取預設配置
 我們輸出了所有的預設配置 [MasterCSSConfig](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts) ，你可以透過以下方式存取：
 ```js
@@ -178,8 +398,10 @@ console.log(defaultColors)
 console.log(defaultBreakpoints)
 // ...
 ```
-[查看所有預設配置](https://github.com/master-co/css/tree/alpha/src/config)
+[查看所有預設配置](https://github.com/master-co/css/tree/beta/src/config)
 
 ---
 
-# 其他新的 API
+# 再來是什麼？
+
+## 🚧 AOT 預先編譯及 CLI
