docs: 2.0.0-beta.tw.md readme

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -11,17 +11,19 @@ npm install @master/css@beta
 - [全新的語法](#全新的語法)
   - [✨ 群組選取器 Grouping Selectors](#-群組選取器-grouping-selectors)
   - [✨ `color` 的替代名稱 `fg|foreground`](#-color-的替代名稱-fgforeground)
+  - [✨ 支援透過百分比 `%` 設置色彩透明度](#-支援透過百分比--設置色彩透明度)
   - [✨ `-webkit-text-fill-color` 的速記 `(t|text):color`](#--webkit-text-fill-color-的速記-ttextcolor)
 - [全新的配置及管理](#全新的配置及管理)
   - [⚙️ `configure()` 擴展及合併配置](#️-configure-擴展及合併配置)
   - [⚙️ `init()` 手動初始化 Master CSS](#️-init-手動初始化-master-css)
-  - [✨ `config.themes` 自訂主題及簡化標記](#-configthemes-自訂主題及簡化標記)
+  - [✨ `config.themes` 透過自訂主題大幅簡化標記](#-configthemes-透過自訂主題大幅簡化標記)
   - [✨ `config.selectors` 自訂選取器標記](#-configselectors-自訂選取器標記)
 - [其他的更動](#其他的更動)
   - [🔄 `fade` -> `slate`](#-fade---slate)
   - [🔄 `MasterStyleSheet` -> `MasterCSS`](#-masterstylesheet---mastercss)
   - [🔄 `MasterStyle` -> `MasterCSSRule`](#-masterstyle---mastercssrule)
   - [🔄 `id="master-css"` -> `title="master"`](#-idmaster-css---titlemaster)
+  - [🔄 `config.colorSchemes` -> `config.themes`](#-configcolorschemes---configthemes)
 - [其他 API](#其他-api)
   - [`render()`](#render)
   - [`renderFromHTML()`](#renderfromhtml)
@@ -36,7 +38,7 @@ npm install @master/css@beta
 # 全新的語法
 
 ## ✨ 群組選取器 Grouping Selectors
-這個功能你一定不陌生，在原生 CSS 使用 `,` 來群組選取器：
+這個功能你一定不陌生，在原生 CSS 你可以使用 `,` 來群組選取器：
 ```css
 :before,
 :after {
@@ -49,8 +51,9 @@ npm install @master/css@beta
 + <div class="content:'`':before,:after"></div>
 ```
 原先的群組語法也支援群組選取器
-```html
-<div class="{content:'`';fg:gray;mx:1}:before,:after"></div>
+```diff
+- <div class="{content:'`';fg:gray;mx:1}:before {content:'`';fg:gray;mx:1}:after"></div>
++ <div class="{content:'`';fg:gray;mx:1}:before,:after"></div>
 ```
 
 ## ✨ `color` 的替代名稱 `fg|foreground`
@@ -84,6 +87,13 @@ fg:$1
 ```
 ⚠️ 建議執行前先將 `unstaged` 的檔案進行 `commit` 以免取代過程發生無法挽回的錯誤。
 
+## ✨ 支援透過百分比 `%` 設置色彩透明度
+和原生相同，支援透過百分比變更色彩透明度的語法。兩種寫法皆可，因人而異。
+```diff
+  <div class="bg:sky-50/.75">v1.0+</div>
++ <div class="bg:sky-50/75%">v2.0+</div>
+```
+
 ## ✨ `-webkit-text-fill-color` 的速記 `(t|text):color`
 為文字色彩提供了新的速記：
 ```diff
@@ -110,9 +120,34 @@ fg:$1
 const { configure } = require('@master/css')
 
 module.exports = configure({
+    colors: {
+        primary: '#175fe9',
+    },
     classes: {
-        btn: 'font:14 h:40 text:center bg:red',
-        card: 'p:20 b:1|solid|gray-80 bg:white'
+        btn: 'font:14 h:40 text:center bg:primary fg:white'
+    },
+    themes: {
+        light: {
+            colors: {
+                primary: '#ebbb40',
+                accent: defaultColors.gold['70'],
+                major: defaultColors.slate['10'],
+                content: defaultColors.slate['30'],
+                fade: defaultColors.slate['55']
+            }
+        },
+        dark: {
+            colors: {
+                primary: '#fbe09d',
+                accent: '#fbe09d',
+                major: defaultColors.gray['80'],
+                content: defaultColors.gray['60'],
+                fade: defaultColors.gray['60']
+            },
+            classes: {
+                btn: 'rounded'
+            },
+        }
     },
     values: {
         Width: {
@@ -135,21 +170,8 @@ module.exports = configure({
     mediaQueries: {
         watch: '(max-device-width:42mm) and (min-device-width:38mm)'
     },
-    colors: {
-        primary: '#175fe9',
-    },
-    themes: {
-        dark: {
-            colors: {
-                primary: '#6b9ef1',
-            },
-            classes: {
-                btn: 'font:14 h:40 text:center bg:white',
-            }
-        }
-    },
-    Rules: [],
-    rootSize: 16
+    rootSize: 16,
+    Rules: []
 })
 ```
 你可能已經發現一些新的配置，我們稍後會提到。
@@ -219,24 +241,65 @@ import './init';
 ...
 ```
 
-## ✨ `config.themes` 自訂主題及簡化標記
-擴展自訂選取器標記，合併並保留預設值：
+## ✨ `config.themes` 透過自訂主題大幅簡化標記
+依據不同的主題自訂 `classes`, `colors` 且合併並保留預設值：
 ```js
 const { configure } = require('@master/css')
 
 module.exports = configure({
     ...,
-    selectors: {
-        '>custom': '>div>:first+button'
+    colors: {
+        primary: '#175fe9',
+    },
+    classes: {
+        btn: 'font:14 h:40 text:center'
+    },
+    themes: {
+        light: {
+            colors: {
+                primary: '#ebbb40',
+                accent: defaultColors.gold['70'],
+                major: defaultColors.slate['10'],
+                content: defaultColors.slate['30'],
+                fade: defaultColors.slate['55']
+            },
+            classes: {
+                btn: 'bg:primary fg:white font:semibold'
+            }
+        },
+        dark: {
+            colors: {
+                primary: '#fbe09d',
+                accent: '#fbe09d',
+                major: defaultColors.gray['80'],
+                content: defaultColors.gray['60'],
+                fade: defaultColors.gray['60']
+            },
+            classes: {
+                btn: 'bg:white fg:primary font:medium'
+            }
+        }
     },
     ...
 })
 ```
-應用它：
-```html
-<div class="hide>custom"></div>
-<div class="hide>div>:first+button">same</div>
+根據 `light` 及 `dark` 設置內容前景色：
+```diff
+- <div class="fg:slate-30@light fg:gray-60@dark">v1.0+</div>
++ <div class="fg:content">v2.0+</div>
+
+# Generated CSS Rules:
+- .dark .fg\:gray-60\@dark { color: #9e9da0 }
+- .light .fg\:slate-30\@light { color: #323e52 }
++ .dark .fg\:content { color: #9e9da0 }
++ .light .fg\:content { color: #323e52 }
 ```
+再看一個進階的選取，根據 `light` 及 `dark` 設置重點前景色：
+```diff
+- <div class="fg:slate-10_:where(strong,b,code,a,mark,del)@light fg:gray-80_:where(strong,b,code,a,mark,del)@dark">v1.0+</div>
++ <div class="fg:major_:where(strong,b,code,a,mark,del)">v2.0+</div>
+```
+
 
 ## ✨ `config.selectors` 自訂選取器標記
 擴展自訂選取器標記，合併並保留預設值：
@@ -257,6 +320,32 @@ module.exports = configure({
 <div class="hide>div>:first+button">same</div>
 ```
 ⚠️ 這個配置的本意是用來合理地簡化原生 CSS 的選取器像是 `hide:first-child` -> `hide:first`，在縮減的同時建議考量專案的可維護性。
+
+你也可以將一個選取器標記對應多個，以預設的供應商前綴為例：
+```js
+const { configure } = require('@master/css')
+
+module.exports = configure({
+    ...,
+    selectors: {
+        '::slider-thumb': ['::-webkit-slider-thumb', '::-moz-range-thumb'],
+        '::slider-runnable-track': ['::-webkit-slider-runnable-track', '::-moz-range-track'],
+        ...
+    },
+    ...
+})
+```
+應用它：
+```html
+<div class="bg:red::slider-thumb">...</div>
+```
+生成的 CSS 規則：
+```css
+.bg\:red\:\:slider-thumb::-webkit-slider-thumb,
+.bg\:red\:\:slider-thumb::-moz-range-thumb {
+    background-color: #d11a1e
+}
+```
 
 [查看所有預設的選取器標記](https://github.com/master-co/css/tree/beta/src/config/selectors.js)
 
@@ -292,6 +381,8 @@ module.exports = configure({
 </head>
 </html>
 ```
+
+## 🔄 `config.colorSchemes` -> `config.themes`
 
 ---
 
