--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -1,5 +1,5 @@
 
-各位久等了！我們今天釋出了 **Master CSS v2.0.0-beta**，該公測版本開放提前試用的目的是希望集結各位對於新功能的反應、回饋甚至建議來加強版本的通用及穩定，並且在 beta 期間做最後的修改。
+各位久等了！經過幾週的衝刺，終於迎來穩定的 **Master CSS v2.0.0-beta** 版本，該公測開放提前試用的目的是希望集結各位對於新功能的反應、回饋甚至建議來加強版本的通用及穩定，並且在 beta 期間做最後的修改。
 
 安裝最新的 beta 版本：
 ```bash
@@ -8,6 +8,7 @@ npm install @master/css@beta
 
 讓我們開始概覽本次的改版及新功能：
 
+- [全新且最快的 AOT 預先編譯](#全新且最快的-aot-預先編譯)
 - [全新的語法](#全新的語法)
   - [✨ 群組選取器 Grouping Selectors](#-群組選取器-grouping-selectors)
   - [✨ `color` 的替代名稱 `fg|foreground`](#-color-的替代名稱-fgforeground)
@@ -31,7 +32,41 @@ npm install @master/css@beta
   - [`fillColorScale()`](#fillcolorscale)
   - [`defaultConfig` 存取預設配置](#defaultconfig-存取預設配置)
 - [再來是什麼？](#再來是什麼)
-  - [🚧 AOT 預先編譯及 CLI](#-aot-預先編譯及-cli)
+  - [AOT 預先編譯整合 Vite、Parcel 及 CLI](#aot-預先編譯整合-viteparcel-及-cli)
+  - [官方文件改版 `docs.master.co` + 全站搜尋](#官方文件改版-docsmasterco--全站搜尋)
+  - [Master UI 系列製作](#master-ui-系列製作)
+
+---
+
+# 全新且最快的 AOT 預先編譯
+在 v1.0 我們設計出了市面最快用於瀏覽器的 JIT 引擎，類名生成週期只需 `~0.01ms/class`，性能如此優越主要歸功於：
+- **⚡️ 沒有使用 CSS 轉換工具**，像 __Tailwind CSS__ 在建置期使用 `postcss`, `autoprefixer` 等預處理 CSS
+- **⚡️ 沒有使用 CSS 預處理器**，像 __Styled Components__ 在執行期使用 `css-to-react-native`, `stylis`
+- **⚡️ 沒有將類名進行 Hash 加工**，像 __Styled Components__ 在執行期以 Hash 的方式重標記 CSS 群組為一條類規則
+- **⚡️ 獨立的規則引擎容器**，大部分的 CSS-in-JS 工具都依附著框架的渲染週期 ( 如 React )，在重新渲染時這類工具勢必會在執行期犧牲相當可觀的運行成本，像 __Styled Components__，而 Master CSS 的 JIT 依賴瀏覽器原生的 API，僅在類名異動時執行，與框架無關
+- **⚡️ 高效的規則引擎**，Master CSS 的 JIT 只進行了一些低執行成本的行為，像是比對類名、解析類名，並且**在執行期高效運作是首要考量**
+- **⚡️ 可解析的結構化語法**，由於 Master CSS 是一個全新的 CSS 語言，所以在語法上有一致的規則可透過相同的解析推演出原生的 CSS，這也是它如此輕量的原因
+
+這次 2.0 我們將飛快的 JIT 引擎應用在 AOT 預先編譯並與主流的建置工具 `webpack`, `vite`, `parcel` 整合，在你的專案以零配置啟動 Master CSS 的 AOT 編譯。
+
+安裝 AOT 最新的 Beta 版本：
+
+```bash
+npm install @master/css.aot@beta -D
+```
+以 Webpack 為例，在你專案中的 `./webpack.config.js` 加入 `MasterCSSWebpackPlugin`：
+```js
+const MasterCSSWebpackPlugin = require('./plugins/webpack')
+
+module.exports = {
+    plugins: [
+        new MasterCSSWebpackPlugin(),
+        ...
+    ],
+    ...
+};
+```
+🥳 現在，直接啟動你的開發伺服器，Master CSS 的 AOT 編譯引擎已經開始作用
 
 ---
 
@@ -341,11 +376,15 @@ module.exports = configure({
 ```
 生成的 CSS 規則：
 ```css
-.bg\:red\:\:slider-thumb::-webkit-slider-thumb,
+.bg\:red\:\:slider-thumb::-webkit-slider-thumb {
+    background-color: #d11a1e
+}
+
 .bg\:red\:\:slider-thumb::-moz-range-thumb {
     background-color: #d11a1e
 }
 ```
+原生 CSS 只要有一個選取器無效整個規則都不會被套用，Master CSS 會自動將包含供應商前綴的選取器分為兩條規則產生。
 
 [查看所有預設的選取器標記](https://github.com/master-co/css/tree/beta/src/config/selectors.js)
 
@@ -495,4 +534,10 @@ console.log(defaultBreakpoints)
 
 # 再來是什麼？
 
-## 🚧 AOT 預先編譯及 CLI
+## AOT 預先編譯整合 Vite、Parcel 及 CLI
+
+## 官方文件改版 `docs.master.co` + 全站搜尋
+
+## Master UI 系列製作
+
+官方版本的 Master UI 元件一直都在製作中，但我們最終先暫緩該系列的製作，等待 `@master/css@2` 穩定並發布後在以其繼續開發元件，第一波會先釋出基本款的開源元件像是 `button`, `card`, `checkbox` 等。
