docs: 2.0.0-beta readme

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -1,7 +1,7 @@
 
 各位久等了！經過幾週的衝刺，終於迎來穩定的 **Master CSS v2.0.0-beta** 版本，該公測開放提前試用的目的是希望集結各位對於新功能的反應、回饋甚至建議來加強版本的通用及穩定，並且在 beta 期間做最後的修改。
 
-安裝最新的 beta 版本：
+安裝 Master CSS 最新的 beta 版本：
 ```bash
 npm install @master/css@beta
 ```
@@ -41,19 +41,24 @@ npm install @master/css@beta
 
 # 全新的 AOT 預先編譯
 在 v1.0 我們設計出了市面最快用於瀏覽器的 JIT 引擎，類名生成週期只需 `~0.01ms/class`，性能如此優越主要歸功於：
-- **⚡️ 沒有使用 CSS 轉換工具**，像 __Tailwind CSS__ 在建置期使用 `postcss`, `autoprefixer` 等預處理 CSS
-- **⚡️ 沒有使用 CSS 預處理器**，像 __Styled Components__ 在執行期使用 `css-to-react-native`, `stylis`
-- **⚡️ 沒有將類名進行 Hash 加工**，像 __Styled Components__ 在執行期以 Hash 的方式重標記 CSS 群組為一條類規則
-- **⚡️ 獨立的規則引擎容器**，大部分的 CSS-in-JS 工具像 __Styled Components__ 都依附著框架的渲染週期 ( 如 React )，在重新渲染時這類工具勢必會在執行期犧牲相當可觀的運行成本。Master CSS 的 JIT 依賴瀏覽器原生的 API，僅在類名異動時執行，與框架無關
-- **⚡️ 高效的規則引擎**，Master CSS 的 JIT 只進行了一些低執行成本的行為，像是比對類名、解析類名，並且**在執行期高效運作是首要考量**
-- **⚡️ 可解析的結構化語法**，由於 Master CSS 是一個全新的 CSS 語言，所以在語法上有一致的規則可透過相同的解析推演出原生的 CSS，這也是它如此輕量的原因
+- **⚡️ 沒有使用 CSS 轉換工具** —— __Tailwind CSS__ 在建置期使用了 `postcss`, `autoprefixer` 預轉換 CSS
+- **⚡️ 沒有使用 CSS 預處理器** —— __Styled Components__ 在執行期使用了 `css-to-react-native`, `stylis` 預處理 CSS
+- **⚡️ 沒有將類名進行 Hash 加工** —— __Styled Components__ 在執行期以 Hash 群組 CSS 規則
+- **⚡️ 獨立的規則引擎容器** —— 大部分的 CSS-in-JS 工具像 __Styled Components__ 都依附著框架的渲染週期 ( 如 React )，在重新渲染時這類工具勢必會在執行期犧牲相當可觀的運行成本。Master CSS 的 JIT 依賴瀏覽器原生的 API，僅在類名異動時執行，與框架無關
+- **⚡️ 高效的規則引擎** —— Master CSS 的 JIT 只進行了一些低執行成本的行為，像是比對類名、解析類名，並且**在執行期高效運作是首要考量**
+- **⚡️ 可解析的結構化語法** —— 由於 Master CSS 是一個全新的 CSS 語言，所以在語法上有一致的規則可透過相同的解析推演出原生的 CSS，這也是它如此輕量的原因
 
 這次 2.0 我們將飛快的 JIT 引擎應用在 AOT 預先編譯並與主流的建置工具 `webpack`, `vite`, `parcel` 整合，在你的專案以零配置啟動 Master CSS 的 AOT 編譯。
+
+安裝 Master CSS AOT 最新的 beta 版本：
+```bash
+npm install @master/css.aot@beta
+```
 
 ## Webpack
 在專案中的 `webpack.config.js` 加入 `MasterCSSWebpackPlugin`：
 ```js
-const { MasterCSSWebpackPlugin } = require('@master/css/build-tool-plugins')
+const { MasterCSSWebpackPlugin } = require('@master/css.aot')
 
 module.exports = {
     plugins: [
@@ -65,12 +70,12 @@ module.exports = {
 ```
 如果是 Next.js：
 ```js
-const { MasterCSSWebpackPlugin } = require('@master/css/build-tool-plugins')
+const { MasterCSSWebpackPlugin } = require('@master/css.aot')
 
 const nextConfig = {
     ...,
     webpack: (config) => {
-        config.plugins.push(MasterCSSWebpackPlugin)
+        config.plugins.push(new MasterCSSWebpackPlugin())
         return config
     }
 }
