--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -532,7 +532,7 @@ module.exports = configure({
 ## `defaultConfig` 存取預設配置
 我們輸出了所有的預設配置 [MasterCSSConfig](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts) ，你可以透過以下方式存取：
 ```js
-import defaultConfig from '@master/css'
+import { defaultConfig } from '@master/css'
 
 console.log(defaultConfig.colors)
 console.log(defaultConfig.breakpoints)
