fix: get `scheme`

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -6,10 +6,10 @@
 npm install @master/css@beta
 ```
 
-讓我們開始概覽本次的改版及新功能：
+此刻，讓我們通過 Beta 來偷窺一些新功能吧！
 
 - [全新的 AOT 預先編譯](#全新的-aot-預先編譯)
-  - [Webpack](#webpack)
+  - [✨ Webpack](#-webpack)
 - [全新的語法](#全新的語法)
   - [✨ 群組選取器 Grouping Selectors](#-群組選取器-grouping-selectors)
   - [✨ `color` 的替代名稱 `fg|foreground`](#-color-的替代名稱-fgforeground)
@@ -20,32 +20,32 @@ npm install @master/css@beta
   - [⚙️ `init()` 手動初始化 Master CSS](#️-init-手動初始化-master-css)
   - [✨ `config.themes` 透過自訂主題大幅簡化標記](#-configthemes-透過自訂主題大幅簡化標記)
   - [✨ `config.selectors` 自訂選取器標記](#-configselectors-自訂選取器標記)
+- [內建主題切換與同步](#內建主題切換與同步)
 - [其他的更動](#其他的更動)
   - [🔄 `fade` -> `slate`](#-fade---slate)
   - [🔄 `MasterStyleSheet` -> `MasterCSS`](#-masterstylesheet---mastercss)
   - [🔄 `MasterStyle` -> `MasterCSSRule`](#-masterstyle---mastercssrule)
   - [🔄 `id="master-css"` -> `title="master"`](#-idmaster-css---titlemaster)
   - [🔄 `config.colorSchemes` -> `config.themes`](#-configcolorschemes---configthemes)
-- [其他 API](#其他-api)
+- [更多的 API](#更多的-api)
   - [`render()`](#render)
   - [`renderFromHTML()`](#renderfromhtml)
   - [`renderIntoHTML()`](#renderintohtml)
   - [`fillColorScale()`](#fillcolorscale)
-  - [`defaultConfig` 存取預設配置](#defaultconfig-存取預設配置)
+  - [`defaultConfig`](#defaultconfig)
 - [再來是什麼？](#再來是什麼)
-  - [AOT 預先編譯整合 Vite、Parcel 及 CLI](#aot-預先編譯整合-viteparcel-及-cli)
-  - [官方文件改版 `docs.master.co` + 全站搜尋](#官方文件改版-docsmasterco--全站搜尋)
-  - [Master UI 系列製作](#master-ui-系列製作)
 
 ---
 
 # 全新的 AOT 預先編譯
-在 v1.0 我們設計出了市面最快用於瀏覽器的 JIT 引擎，類名生成週期只需 `~0.01ms/class`，性能如此優越主要歸功於：
+在 v1.0，Master CSS 專於打造一個用於瀏覽器高性能的 JIT 引擎，類名生成週期只需 `~0.01ms/class`：
 - **⚡️ 沒有使用 CSS 轉換工具** —— __Tailwind CSS__ 在建置期使用了 `postcss`, `autoprefixer` 預轉換 CSS
 - **⚡️ 沒有使用 CSS 預處理器** —— __Styled Components__ 在執行期使用了 `css-to-react-native`, `stylis` 預處理 CSS
-- **⚡️ 沒有將類名進行 Hash 加工** —— __Styled Components__ 在執行期以 Hash 群組 CSS 規則
-- **⚡️ 獨立的規則引擎容器** —— 大部分的 CSS-in-JS 工具像 __Styled Components__ 都依附著框架的渲染週期 ( 如 React )，在重新渲染時這類工具勢必會在執行期犧牲相當可觀的運行成本。Master CSS 的 JIT 依賴瀏覽器原生的 API，僅在類名異動時執行，與框架無關
-- **⚡️ 高效的規則引擎** —— Master CSS 的 JIT 只進行了一些低執行成本的行為，像是比對類名、解析類名，並且**在執行期高效運作是首要考量**
+- **⚡️ 沒有將類名進行 Hash 加工** —— __Styled Components__ 在執行期將類進行 hash 來群組特定域的 CSS 規則
+- **⚡️ 獨立的規則引擎容器** —— 大部分的 CSS-in-JS 工具如 __Styled Components__ 都依附著框架的渲染週期 ( 如 React )，在重新渲染時這類工具勢必會在執行期犧牲相當可觀的運行成本。
+
+    Master CSS 的 JIT 依賴瀏覽器原生的 API，僅在類名異動時執行，與框架無關
+- **⚡️ 高效的規則引擎** —— Master CSS 的 JIT 只進行了一些低執行成本的行為，像是比對類名、解析類名，並且**在執行期高效運作一直是 v1.0 首要的考量**
 - **⚡️ 可解析的結構化語法** —— 由於 Master CSS 是一個全新的 CSS 語言，所以在語法上有一致的規則可透過相同的解析推演出原生的 CSS，這也是它如此輕量的原因
 
 這次 2.0 我們將飛快的 JIT 引擎應用在 AOT 預先編譯並與主流的建置工具 `webpack`, `vite`, `parcel` 整合，在你的專案以零配置啟動 Master CSS 的 AOT 編譯。
@@ -55,7 +55,7 @@ npm install @master/css@beta
 npm install @master/css.aot@beta
 ```
 
-## Webpack
+## ✨ Webpack
 在專案中的 `webpack.config.js` 加入 `MasterCSSWebpackPlugin`：
 ```js
 const { MasterCSSWebpackPlugin } = require('@master/css.aot')
@@ -83,8 +83,9 @@ const nextConfig = {
 module.exports = nextConfig
 ```
 
-
 🥳 現在，直接啟動你的開發伺服器，Master CSS 的 AOT 編譯引擎已經開始作用
+
+其他框架及建置工具的安裝指南將和 v2.0 一起釋出
 
 ---
 
@@ -408,6 +409,10 @@ module.exports = configure({
 
 ---
 
+# 內建主題切換與同步
+
+---
+
 # 其他的更動
 
 ## 🔄 `fade` -> `slate`
@@ -443,7 +448,7 @@ module.exports = configure({
 
 ---
 
-# 其他 API
+# 更多的 API
 
 ## `render()`
 傳入類名陣列並返回產生的 CSS 文本。
@@ -529,7 +534,7 @@ module.exports = configure({
 ```
 如此以來，你不只有 `blue-40`, `blue-50` 還有 `blue-67`, `blue-72` 等間值可以選用，以獲得更好的顯色。
 
-## `defaultConfig` 存取預設配置
+## `defaultConfig`
 我們輸出了所有的預設配置 [MasterCSSConfig](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts) ，你可以透過以下方式存取：
 ```js
 import { defaultConfig } from '@master/css'
@@ -552,10 +557,6 @@ console.log(defaultBreakpoints)
 
 # 再來是什麼？
 
-## AOT 預先編譯整合 Vite、Parcel 及 CLI
-
-## 官方文件改版 `docs.master.co` + 全站搜尋
-
-## Master UI 系列製作
-
-官方版本的 Master UI 元件一直都在製作中，但我們最終先暫緩該系列的製作，等待 `@master/css@2` 穩定發布後在以其繼續開發元件，第一波會先釋出基本款的開源元件像是 `button`, `card`, `checkbox` 等。
+1. **文件 `docs.master.co` 的改版**：新的全站搜尋功能及介面
+2. **首頁 `css.master.co` 的改版**：過去我們將全部的精力投入在 Master CSS 核心功能的研發及改進，很多經典甚至過人的特色一直埋沒在文件中，透過視覺加強優勢的傳達將會是這次改版的重點！
+3. **Master UI 系列的製作**：相信很多人都迫不及待 Master UI 的系列，我們極度講究介面的細節及原始碼的品質，預計於年底前將釋出基本的開源組件如 `button`, `card`, `tabs` 等。
