docs: 2.0.0-beta.tw readme

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -1,15 +1,17 @@
 
 各位久等了！經過幾週的衝刺，終於迎來穩定的 **Master CSS v2.0.0-beta** 版本，該公測開放提前試用的目的是希望集結各位對於新功能的反應、回饋甚至建議來加強版本的通用及穩定，並且在 beta 期間做最後的修改。
 
-安裝 Master CSS 最新的 beta 版本：
+安裝 Master CSS 公測版：
 ```bash
 npm install @master/css@beta
 ```
 
 此刻，讓我們通過 Beta 來偷窺一些新功能吧！
 
-- [全新的 AOT 預先編譯](#全新的-aot-預先編譯)
+- [全新的預編譯模式](#全新的預編譯模式)
   - [✨ Webpack](#-webpack)
+  - [✨ Vite](#-vite)
+  - [✨ Next.js](#-nextjs)
 - [全新的語法](#全新的語法)
   - [✨ 群組選取器 Grouping Selectors](#-群組選取器-grouping-selectors)
   - [✨ `color` 的替代名稱 `fg|foreground`](#-color-的替代名稱-fgforeground)
@@ -21,6 +23,10 @@ npm install @master/css@beta
   - [✨ `config.themes` 透過自訂主題大幅簡化標記](#-configthemes-透過自訂主題大幅簡化標記)
   - [✨ `config.selectors` 自訂選取器標記](#-configselectors-自訂選取器標記)
 - [內建主題切換與同步](#內建主題切換與同步)
+  - [✨ 切換主題方案](#-切換主題方案)
+  - [✨ 存取主題方案](#-存取主題方案)
+  - [✨ 自定主題方案配置](#-自定主題方案配置)
+  - [範例：在 React 實作主題切換](#範例在-react-實作主題切換)
 - [其他的更動](#其他的更動)
   - [🔄 `fade` -> `slate`](#-fade---slate)
   - [🔄 `MasterStyleSheet` -> `MasterCSS`](#-masterstylesheet---mastercss)
@@ -37,27 +43,38 @@ npm install @master/css@beta
 
 ---
 
-# 全新的 AOT 預先編譯
-在 v1.0，Master CSS 專於打造一個用於瀏覽器高性能的 JIT 引擎，類名生成週期只需 `~0.01ms/class`：
+# 全新的預編譯模式
+在介紹預編譯 ( Ahead-of-time Compilation ) 模式前，讓我們先回顧 v1.0 的優勢。
+
+Master CSS 在 v1.0 專注打造一個於執行期高效運行的 JIT 引擎，類名生成週期只需 `~0.01ms/class`，具有以下特點：
 - **⚡️ 沒有使用 CSS 轉換工具** —— __Tailwind CSS__ 在建置期使用了 `postcss`, `autoprefixer` 預轉換 CSS
 - **⚡️ 沒有使用 CSS 預處理器** —— __Styled Components__ 在執行期使用了 `css-to-react-native`, `stylis` 預處理 CSS
 - **⚡️ 沒有將類名進行 Hash 加工** —— __Styled Components__ 在執行期將類進行 hash 來群組特定域的 CSS 規則
-- **⚡️ 獨立的規則引擎容器** —— 大部分的 CSS-in-JS 工具如 __Styled Components__ 都依附著框架的渲染週期 ( 如 React )，在重新渲染時這類工具勢必會在執行期犧牲相當可觀的運行成本。
+- **⚡️ 獨立的規則引擎容器** —— 大部分的 CSS-in-JS 工具如 __Styled Components__ 都依附著框架的渲染週期 ( 如 React )，在重新渲染時這類工具勢必會在執行期犧牲相當可觀的渲染成本。
 
     Master CSS 的 JIT 依賴瀏覽器原生的 API，僅在類名異動時執行，與框架無關
 - **⚡️ 高效的規則引擎** —— Master CSS 的 JIT 只進行了一些低執行成本的行為，像是比對類名、解析類名，並且**在執行期高效運作一直是 v1.0 首要的考量**
 - **⚡️ 可解析的結構化語法** —— 由於 Master CSS 是一個全新的 CSS 語言，所以在語法上有一致的規則可透過相同的解析推演出原生的 CSS，這也是它如此輕量的原因
 
-這次 2.0 我們將飛快的 JIT 引擎應用在 AOT 預先編譯並與主流的建置工具 `webpack`, `vite`, `parcel` 整合，在你的專案以零配置啟動 Master CSS 的 AOT 編譯。
+在 v2.0，我們直接將飛快的 JIT 引擎應用在 AOT 預編譯模式，其運作原理是透過掃描編譯後的 `.html` 及 `.js` 中的字串或模板標記 ( Tailwind CSS 及 Windi CSS 是掃描原始碼，如 `.jsx`, `.vue` )，經過規則引擎比對是否為 Master CSS 類名並輸出為一包 CSS 檔。
 
-安裝 Master CSS AOT 最新的 beta 版本：
+我們認為掃描編譯後的 `.html` 及 `.js` 有以下優勢：
+
+- ✅ 無需針對框架特殊的檔案格式進行解析，擁有更好的相容性
+- ✅ 無需仰賴 `loader` 載入特定的檔案格式，如 `webpack`
+- ✅ 依賴建置工具的相依樹自動抓取來源
+
+安裝 Master CSS 編譯器公測版：
 ```bash
-npm install @master/css.aot@beta
+npm install @master/css-compiler@beta
 ```
 
+我們提供了與主流建置工具的整合套件，在你的專案以零配置啟動 Master CSS 的 AOT 編譯。
+
 ## ✨ Webpack
-在專案中的 `webpack.config.js` 加入 `MasterCSSWebpackPlugin`：
 ```js
+/* ⚙️ webpack.config.js */
+
 const { MasterCSSWebpackPlugin } = require('@master/css.aot')
 
 module.exports = {
@@ -68,14 +85,36 @@ module.exports = {
     ...
 };
 ```
-如果是 Next.js：
+
+## ✨ Vite
 ```js
+/* ⚙️ vite.config.js */
+
+import { MasterCSSVitePlugin } from '../../dist'
+
+export default defineConfig({
+    plugins: [
+        MasterCSSVitePlugin()
+    ]
+})
+
+```
+
+## ✨ Next.js
+```js
+/* ⚙️ next.config.js */
+
 const { MasterCSSWebpackPlugin } = require('@master/css.aot')
 
 const nextConfig = {
     ...,
     webpack: (config) => {
-        config.plugins.push(new MasterCSSWebpackPlugin())
+        config.plugins.push(
+            new MasterCSSWebpackPlugin({
+                dir: 'static/css',
+                name: 'master.css'
+            })
+        )
         return config
     }
 }
@@ -83,9 +122,10 @@ const nextConfig = {
 module.exports = nextConfig
 ```
 
-🥳 現在，直接啟動你的開發伺服器，Master CSS 的 AOT 編譯引擎已經開始作用
+更多的框架及建置工具指南將和 v2.0 一同推出...
 
-其他框架及建置工具的安裝指南將和 v2.0 一起釋出
+🥳 現在，直接啟動你的開發伺服器，Master CSS 的 AOT 編譯引擎將隨即運行！
+
 
 ---
 
@@ -272,7 +312,7 @@ module.exports = configure({
 ## ⚙️ `init()` 手動初始化 Master CSS
 搭配自訂配置初始化 Master CSS：
 ```js
-// It's recommanded to create a `./init.js` file to manage initialization.
+// Create a `./master.{js,ts}` file to manage initialization.
 
 import config from './master.css' // Your config file
 import { init } from '@master/css'
@@ -280,12 +320,12 @@ import { init } from '@master/css'
 export const css = init(config)
 ```
 
-別忘了在你應用程式的入口檔案引入 `./init.js`，例如 `./main.js`
+別忘了在應用程式的入口引入 `./master.js`，例如 `./main.js`
 ```js
-import './init';
+import './master';
 ```
 
-如果你原本是在 `<head>` 中透過 CDN 快速啟用，請在引入後初始化 Master CSS：
+如果你是在 `<head>` 中透過 CDN 快速啟用，引入後請立即初始化 Master CSS：
 ```diff
 ...
 <head>
@@ -354,7 +394,6 @@ module.exports = configure({
 + <div class="fg:major_:where(strong,b,code,a,mark,del)">v2.0+</div>
 ```
 
-
 ## ✨ `config.selectors` 自訂選取器標記
 擴展自訂選取器標記，合併並保留預設值：
 ```js
@@ -369,9 +408,9 @@ module.exports = configure({
 })
 ```
 應用它：
-```html
-<div class="hide>custom"></div>
-<div class="hide>div>:first+button">same</div>
+```diff
+- <div class="hide>div>:first+button">same</div>
++ <div class="hide>custom"></div>
 ```
 ⚠️ 這個配置的本意是用來合理地簡化原生 CSS 的選取器像是 `hide:first-child` -> `hide:first`，在縮減的同時建議考量專案的可維護性。
 
@@ -410,6 +449,71 @@ module.exports = configure({
 ---
 
 # 內建主題切換與同步
+由於主題切換的邏輯大同小異且很常被使用，我們決定在 v2.0 內建該功能，包含：
+
+- 零配置啟用
+- 與作業系統偏好同步 `system`
+- 儲存用戶偏好，與 `localStorage` 同步
+- 搭配設置 `color-scheme`，例如：`<html style="color-scheme: dark">`
+- 透過類 `class` 切換主題，例如：`<html class="dark">`
+
+## ✨ 切換主題方案 
+
+```ts
+import { css } from './master'
+css.scheme = 'dark' // default: 'system'
+```
+
+## ✨ 存取主題方案
+```ts
+import { css } from './master'
+console.log(css.scheme) // default: 'light', 'dark', 'system'
+console.log(css.theme) // default: 'light', 'dark'
+```
+
+## ✨ 自定主題方案配置
+以下配置皆為預設值，其中 `scheme.preference` 為網站預設的主題方案偏好。
+```js
+const { configure } = require('@master/css')
+
+module.exports = configure({
+    ...,
+    scheme: {
+        preference: 'system', // 'system', 'dark', 'light'
+        storage: {
+            sync: true,
+            key: 'scheme'
+        }
+    }
+    ...
+})
+```
+
+## 範例：在 React 實作主題切換
+我們提供了 [useScheme](https://github.com/master-co/css.react#usescheme)，讓你無痛依賴 React 的渲染機制實作 UI。
+```tsx
+import { css } from '~/master';
+import { useEffected, useScheme } from '@master/css.react'
+import { useCallback } from 'react';
+
+export default function ThemeSchemeButton() {
+    const { scheme, setScheme, theme } = useScheme(css)
+    const effected = useEffected()
+    const changeScheme = useCallback(({ target }) => {
+        setScheme(target.value)
+    }, [setScheme])
+    return (
+        <button className="rel">
+            {effected && theme}
+            <select value={scheme} onChange={changeScheme} className="abs full opacity:0 cursor:pointer" >
+                <option value="light">☀️ Light</option>
+                <option value="dark">🌜 'Dark</option>
+                <option value="system">System</option>
+            </select>
+        </button>
+    )
+}
+```
 
 ---
 
@@ -449,6 +553,7 @@ module.exports = configure({
 ---
 
 # 更多的 API
+渲染相關的 API 在 v1.0 主要用於伺服器渲染 ( Server-side Rendering ) 及靜態站點生成 ( Static-site Generation )，在 v2.0 沒有太大的改變，只有進行局部的 API 優化。
 
 ## `render()`
 傳入類名陣列並返回產生的 CSS 文本。
@@ -558,5 +663,5 @@ console.log(defaultBreakpoints)
 # 再來是什麼？
 
 1. **文件 `docs.master.co` 的改版**：新的全站搜尋功能及介面
-2. **首頁 `css.master.co` 的改版**：過去我們將全部的精力投入在 Master CSS 核心功能的研發及改進，很多經典甚至過人的特色一直埋沒在文件中，透過視覺加強優勢的傳達將會是這次改版的重點！
+2. **首頁 `css.master.co` 的改版**：過去我們將全部的精力投入在 Master CSS 核心功能研發，許多經典特色一直埋沒在文件中，透過視覺加強優勢的傳達將會是這次改版的重點！
 3. **Master UI 系列的製作**：相信很多人都迫不及待 Master UI 的系列，我們極度講究介面的細節及原始碼的品質，預計於年底前將釋出基本的開源組件如 `button`, `card`, `tabs` 等。
