docs(README): related

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -26,14 +26,15 @@ npm install @master/css@beta
   - [✨ 切換主題方案](#-切換主題方案)
   - [✨ 存取主題方案](#-存取主題方案)
   - [✨ 自定主題方案配置](#-自定主題方案配置)
-  - [範例：在 React 實作主題切換](#範例在-react-實作主題切換)
+  - [✨ 在 React 中實作主題切換](#-在-react-中實作主題切換)
 - [其他的更動](#其他的更動)
   - [🔄 `fade` -> `slate`](#-fade---slate)
   - [🔄 `MasterStyleSheet` -> `MasterCSS`](#-masterstylesheet---mastercss)
   - [🔄 `MasterStyle` -> `MasterCSSRule`](#-masterstyle---mastercssrule)
   - [🔄 `id="master-css"` -> `title="master"`](#-idmaster-css---titlemaster)
   - [🔄 `config.colorSchemes` -> `config.themes`](#-configcolorschemes---configthemes)
-  - [🔄 升級 VSCode 上的 Master CSS Language Service 擴充到 v2](#-升級-vscode-上的-master-css-language-service-擴充到-v2)
+  - [🔄 升級 Master CSS 語言服務](#-升級-master-css-語言服務)
+- [全新套件](#全新套件)
 - [更多的 API](#更多的-api)
   - [`render()`](#render)
   - [`renderFromHTML()`](#renderfromhtml)
@@ -72,8 +73,6 @@ npm install @master/css-compiler@beta
 
 我們提供了與主流建置工具的整合，你幾乎可以零配置啟動 Master CSS 的 AOT 編譯模式。
 
-- 🔥 支援模組熱替換 (HMR, Hot Module Replacement)
-
 ## ✨ Webpack
 ```js
 /* ⚙️ webpack.config.js */
@@ -111,8 +110,10 @@ const nextConfig = {
     webpack: (config) => {
         config.plugins.push(
             new MasterCSSWebpackPlugin({
-                dir: 'static/css',
-                name: 'master.css'
+                output: {
+                    dir: 'static/css',
+                    name: 'master.css'
+                }
             })
         )
         return config
@@ -489,10 +490,10 @@ module.exports = configure({
 })
 ```
 
-## 範例：在 React 實作主題切換
-我們提供了 [useScheme](https://github.com/master-co/css.react#usescheme)，讓你無痛依賴 React 的渲染機制實作 UI。
+## ✨ 在 React 中實作主題切換
+我們提供了 [useScheme](https://github.com/master-co/css.react#usescheme) 掛鈎，讓你無痛依賴 React 的渲染機制
 ```tsx
-import { css } from '~/master';
+import { css } from './master';
 import { useEffected, useScheme } from '@master/css.react'
 import { useCallback } from 'react';
 
@@ -550,7 +551,15 @@ export default function ThemeSchemeButton() {
 
 ## 🔄 `config.colorSchemes` -> `config.themes`
 
-## 🔄 升級 VSCode 上的 Master CSS Language Service 擴充到 v2
+## 🔄 升級 Master CSS 語言服務
+請升級 VSCode 上的 [Master CSS 語言服務擴充](https://github.com/master-co/css-language-service)到 v2.0
+
+---
+
+# 全新套件
+
+- [@master/css.react](https://github.com/master-co/css.react) - React hooks for Master CSS
+- [@master/css-compiler](https://github.com/master-co/css-compiler) - Compile Master CSS ahead of time with zero-configuration integration with build tools
 
 ---
 
@@ -667,4 +676,4 @@ console.log(defaultBreakpoints)
 1. **文件 `docs.master.co` 改版**：新的全站搜尋功能及介面
 2. **首頁 `css.master.co` 改版**：過去我們將全部的精力投入在 Master CSS 核心功能研發，許多經典特色一直埋沒在文件中，透過視覺加強優勢的傳達將會是這次改版的重點！
 3. **正式版 v2.0**：公測版本發布後，我們預計在一個月後發布正式版
-4. **Master UI 系列**：相信很多人都迫不及待 Master UI 的系列，我們極度講究介面的細節及原始碼的品質，預計於年底釋出基本的開源元件如 `button`, `card`, `tabs` 等。
+4. **Master UI 系列**：相信很多人都迫不及待 Master UI 的系列，我們極度講究介面的細節及原始碼的品質，正細火慢熬中，預計於年底釋出基本的開源元件如 `button`, `card`, `tabs` 等。
